0.6.1 (currently working on)

0.6.0 (released 2008-05-12)
- [#1339] Feature: Add a switch that controls when unregistration is possible
- [#1408] Feature: Create a list of categories
- [#1874] Fix: Crash on the "my events page" after unregistering from an event
- [#1873] Fix: Crash when clicking on a CSV icon in mod2
- [#1854] Change: Remove notYetImplementedSubModule from mod2/locallang.xml
- [#1686] Fix: Removed wrongly encoded stuff from Danish translation in locallang file
- [#1165] Feature: Add a checkbox "Skip registration collision check" to event records
- [#1226] Fix: showSingleEvent is missing from setup.txt
- [#1833] Fix: private -> protected in pi2 (XCLASSING issue), patch by Stefan Galinski
- [#1771] Updated Dutch translation, thanks to Kees van der Hall
- [#1818] Change: Comment and whitespace consistency cleanup
- [#1790] Fix: Option boxes for event types: Type "Workshop" loses the selection after submitting
- [#1758] Fix: HTML validation errors in the list view option boxes
- [#811] Feature: Add, edit, list functionality like the be_groups field in the be_user dialog, patch by Stefan Galinski
- [#1774] Updated Russion translation, thanks to Irina Kuznecova
- [#1770] Updated Italian translation, thanks to Mauro Lorenzutti
- [#1769] Updated French translation, thanks to Francois Suter
- [#1768] Updated Danish translation, thanks to Lars Dyhr
- [#1767] Fix: Catchable fatal error without events in list view
- [#1737] Fix: In mod2, topics and dates have the "single event" icon
- [#1443] Fix: omitDateIfSameAsPrevious does not work
- [#1739] Fix: template.php imported twice
- [#536] Change: Use the speakerbag for iterating over speakers
- [#537] Change: Use the organizerbag for iterating over organizers
- [#1569] Feature: Link the categories in the list view to the list view page, filtered by the category
- [#1406] Feature: Add a switch to always sort the list view by category
- [#1616] Change: Add a conflict with DBAL and mention this in the manual